indexland_derive/tests/ui/nonexistant_trait.stderr
error: `From<Foo<qq` does not name a trait that will be derived
 --> tests/ui/nonexistant_trait.rs:5:22
  |
5 |     #[indexland(omit(From<Foo<qq, bb>>))]
  |                      ^^^^

error: `bb>>` does not name a trait that will be derived
 --> tests/ui/nonexistant_trait.rs:5:35
  |
5 |     #[indexland(omit(From<Foo<qq, bb>>))]
  |                                   ^^
